; ModuleID = '/home/carl/AnghaBench/tmux/extr_screen-write.c_screen_write_initctx.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_screen-write.c_screen_write_initctx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.screen_write_ctx = type { i32, %struct.screen* }
%struct.screen = type { i32, i32, i32, i32 }
%struct.tty_ctx = type { i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.screen_write_ctx*, %struct.tty_ctx*)* @screen_write_initctx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @screen_write_initctx(%struct.screen_write_ctx* %0, %struct.tty_ctx* %1) #0 {
  %3 = alloca %struct.screen_write_ctx*, align 8
  %4 = alloca %struct.tty_ctx*, align 8
  %5 = alloca %struct.screen*, align 8
  store %struct.screen_write_ctx* %0, %struct.screen_write_ctx** %3, align 8
  store %struct.tty_ctx* %1, %struct.tty_ctx** %4, align 8
  %6 = load %struct.screen_write_ctx*, %struct.screen_write_ctx** %3, align 8
  %7 = getelementptr inbounds %struct.screen_write_ctx, %struct.screen_write_ctx* %6, i32 0, i32 1
  %8 = load %struct.screen*, %struct.screen** %7, align 8
  store %struct.screen* %8, %struct.screen** %5, align 8
  %9 = load %struct.tty_ctx*, %struct.tty_ctx** %4, align 8
  %10 = call i32 @memset(%struct.tty_ctx* %9, i32 0, i32 20)
  %11 = load %struct.screen_write_ctx*, %struct.screen_write_ctx** %3, align 8
  %12 = getelementptr inbounds %struct.screen_write_ctx, %struct.screen_write_ctx* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = load %struct.tty_ctx*, %struct.tty_ctx** %4, align 8
  %15 = getelementptr inbounds %struct.tty_ctx, %struct.tty_ctx* %14, i32 0, i32 4
  store i32 %13, i32* %15, align 4
  %16 = load %struct.screen*, %struct.screen** %5, align 8
  %17 = getelementptr inbounds %struct.screen, %struct.screen* %16, i32 0, i32 3
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.tty_ctx*, %struct.tty_ctx** %4, align 8
  %20 = getelementptr inbounds %struct.tty_ctx, %struct.tty_ctx* %19, i32 0, i32 3
  store i32 %18, i32* %20, align 4
  %21 = load %struct.screen*, %struct.screen** %5, align 8
  %22 = getelementptr inbounds %struct.screen, %struct.screen* %21, i32 0, i32 2
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.tty_ctx*, %struct.tty_ctx** %4, align 8
  %25 = getelementptr inbounds %struct.tty_ctx, %struct.tty_ctx* %24, i32 0, i32 2
  store i32 %23, i32* %25, align 4
  %26 = load %struct.screen*, %struct.screen** %5, align 8
  %27 = getelementptr inbounds %struct.screen, %struct.screen* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.tty_ctx*, %struct.tty_ctx** %4, align 8
  %30 = getelementptr inbounds %struct.tty_ctx, %struct.tty_ctx* %29, i32 0, i32 1
  store i32 %28, i32* %30, align 4
  %31 = load %struct.screen*, %struct.screen** %5, align 8
  %32 = getelementptr inbounds %struct.screen, %struct.screen* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = load %struct.tty_ctx*, %struct.tty_ctx** %4, align 8
  %35 = getelementptr inbounds %struct.tty_ctx, %struct.tty_ctx* %34, i32 0, i32 0
  store i32 %33, i32* %35, align 4
  ret void
}

declare dso_local i32 @memset(%struct.tty_ctx*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
